--- a/application/build.gradle
+++ b/application/build.gradle
@@ -16,7 +16,6 @@ plugins {
     id 'org.springframework.boot' version '2.1.2.RELEASE'
     id 'com.benjaminsproule.swagger' version '1.0.6'
     id "com.moowork.node" version "1.3.1"
-    id 'net.ltgt.apt' version '0.10'
 }
 
 group 'com.csieflyman'
@@ -58,8 +57,8 @@ dependencies {
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
     implementation group: 'io.springfox', name: 'springfox-bean-validators', version: '2.9.2'
 
-    compileOnly 'org.projectlombok:lombok:1.18.4'
-    apt 'org.projectlombok:lombok:1.18.4'
+    compileOnly 'org.projectlombok:lombok:1.18.8'
+    annotationProcessor 'org.projectlombok:lombok:1.18.8'
 }
 
 dependencyManagement {
@@ -67,7 +66,6 @@ dependencyManagement {
 }
 
 swagger {
-    project(':library')
     apiSource {
         springmvc = true
         attachSwaggerArtifact = true
