--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql = true
-
-spring.h2.console.enabled=true
+spring.jpa.show-sql = false
 
 spring.flyway.url = jdbc:h2:mem:testdb
 spring.flyway.baseline-on-migrate = true
+
+logging.level.example.controller=INFO
