--- a/application/build.gradle
+++ b/application/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     implementation group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.3'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.2'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     implementation group: 'com.google.guava', name: 'guava', version: '27.0.1-jre'
 
     implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
